force-app/main/default/objects/Account/fields/CheckFlowScanner__c.field-meta.xml
<CustomField>
    <fullName>CheckFlowScanner__c</fullName>
    <label>CheckFlowScanner</label>
    <length>22</length>
    <type>Text</type>
</CustomField>