force-app/main/default/objects/Account/fields/Commit_Exp__c.field-meta.xml
<CustomField>
    <fullName>Commit_Exp__c</fullName>
    <label>Commit Exp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>