force-app/main/default/objects/Account/fields/FF_for_New_Commit_Exp__c.field-meta.xml
<CustomField>
    <fullName>FF_for_New_Commit_Exp__c</fullName>
    <formula>Commit_Exp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FF for New Commit Exp</label>
    <type>Text</type>
</CustomField>