force-app/main/default/objects/Account/fields/FormulaFirst__c.field-meta.xml
<CustomField>
    <fullName>FormulaFirst__c</fullName>
    <formula>First_Field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaFirst</label>
    <type>Text</type>
</CustomField>