force-app/main/default/objects/Account/recordTypes/Person_Account_Test.recordType-meta.xml
<RecordType>
    <fullName>Person_Account_Test</fullName>
    <active>true</active>
    <label>Person Account Test</label>
</RecordType>